@@ -27,9 +27,12 @@ import com.sshtools.common.ssh.SessionChannel;
 import com.sshtools.common.ssh.SshConnection;
 import com.sshtools.common.ssh.Subsystem;
 import com.sshtools.common.ssh.UnsupportedChannelException;
+import com.sshtools.common.ssh.components.ComponentFactory;
 
 public interface ChannelFactory<T extends SshContext> {
 
+	ComponentFactory<ExecutableCommand> supportedCommands();
+	
 	ChannelNG<T> createChannel(String channeltype, SshConnection con) throws UnsupportedChannelException, PermissionDeniedException, ChannelOpenException;
     
 	Subsystem createSubsystem(String name, SessionChannel session) throws UnsupportedChannelException, PermissionDeniedException;
