@@ -253,7 +253,7 @@ public abstract class AbstractSshServer implements Closeable {
 	protected void configureFilesystem(SshServerContext sshContext, SocketChannel sc) throws IOException, SshException {
 		sshContext.getPolicy(FileSystemPolicy.class).setFileFactory(fileFactory);
 		if(enableScp) {
-			sshContext.addCommand("scp", ScpCommand.class);
+			channelFactory.supportedCommands().add("scp", ScpCommand.class);
 		}
 	}
 	
